--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "eventemitter3": "^4.0.7",
     "typescript": "^4.8.4"
   },
   "scripts": {
